--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
+nav {
+    width: 100%;
+    height: 100px;
+}
+
 nav ul {
+    display: inline-flex;
     list-style: none;
+    background-color: darkgrey;
 }
 
 nav ul li a{
     color: #bc0000;
-    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
+    border: medium #bc0000 solid;
+    margin: 15px;
+    line-height: 60px;
+    padding: 0px 20px;
+    text-align: center;
 }
 
 nav ul li a:hover{
