--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 nav {
     width: 100%;
     height: 100px;
@@ -22,4 +26,13 @@ nav ul li a{
 
 nav ul li a:hover{
     color: black;
+}
+
+footer {
+    background-color: darkgray;
+    line-height: 10em;
+}
+
+footer p {
+    color: #bc0000;
 }
