--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --dark-color: darkgrey;
+    --light-color: #bc0000;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,14 +15,14 @@ nav {
 nav ul {
     display: inline-flex;
     list-style: none;
-    background-color: darkgrey;
+    background-color: var(--dark-color);
 }
 
 nav ul li a {
-    color: #bc0000;
+    color: var(--light-color);
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    border: medium #bc0000 solid;
+    border: medium var(--light-color) solid;
     margin: 15px;
     line-height: 50px;
     padding: 0px 20px;
@@ -28,9 +33,8 @@ nav ul li a:hover {
     color: black;
 }
 
-
 footer {
-    background-color: #bc0000;
+    background-color: var(--light-color);
     color: white;
     text-align: center;
     padding: 20px;
@@ -41,4 +45,9 @@ footer {
     font-size: 0.75em;
     font-style: italic;
     text-align: center;
+}
+
+#staff-img{
+    width: 100px;
+    height: 100px;
 }
