--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 nav {
     width: 100%;
-    height: 100px;
+    height: 100px 1fr;
+    display: grid;
 }
 
 nav ul {
@@ -26,7 +27,6 @@ nav ul li a {
     margin: 15px;
     line-height: 50px;
     padding: 0px 20px;
-    text-align: center;
 }
 
 nav ul li a:hover {
@@ -57,4 +57,12 @@ fieldset {
     border: 2px solid black;
     padding: 20px;
     margin-top: 20px;
+}
+
+.gridcontainer {
+    display: grid;
+    grid-auto-flow: dense (auto-fit);
+    column-width: 200px;
+    max-width: 1fr;
+    gap: 10px;
 }
