--- a/pages/style.css
+++ b/pages/style.css
@@ -11,6 +11,7 @@ nav {
     width: 100%;
     height: 100px 1fr;
     display: grid;
+    gap: 20px;
 }
 
 nav ul {
@@ -47,7 +48,9 @@ footer {
     text-align: center;
 }
 
-#staff-img{
+#staff-img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     width: 100px;
     height: 100px;
 }
@@ -61,8 +64,21 @@ fieldset {
 
 .gridcontainer {
     display: grid;
-    grid-auto-flow: dense (auto-fit);
-    column-width: 200px;
-    max-width: 1fr;
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-flow: dense;
+    gap: 15px;
 }
+
+.image-container img {
+    width: 100%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  }
+
+.image-container.large-width {
+    grid-column: span 2;
+}
+
+.image-container.large-height {
+    grid-row: span 2;
+}
+
