--- a/pages/style.css
+++ b/pages/style.css
@@ -1,91 +1,100 @@
 :root {
-    --dark-color: darkgrey;
-    --light-color: #bc0000;
+    --dark-color: #bc0000;
+    --light-color: lightgray;
 }
 
-body {
+header {
+    background-color: var(--light-color);
+    color: var(--dark-color);
     font-family: Arial, Helvetica, sans-serif;
+    border: var(--dark-color) medium solid;
 }
 
 nav {
-    width: 100%;
-    height: 100px 1fr;
-    display: grid;
-    gap: 20px;
-
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
     background-color: var(--dark-color);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    display: grid;
+    gap: 230px;
 }
 
-nav ul li a {
+nav p {
+    border: medium solid var(--light-color);
+    background-color: var(--dark-color);
+    display: inline-block;
+    width: 85px;
+    text-align: center;
+    margin-left: 3px;
+}
+
+nav a {
     color: var(--light-color);
-    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    border: medium var(--light-color) solid;
-    margin: 15px;
-    line-height: 50px;
-    padding: 0px 20px;
+    font-weight: bold;
 }
 
-nav ul li a:hover {
+nav p a:hover {
     color: black;
 }
 
 footer {
-    background-color: var(--light-color);
-    color: white;
-    text-align: center;
-    padding: 20px;
-    line-height: 80px;
+    background-color: var(--dark-color);
+    color: var(--light-color);
 }
 
-.footer-text {
+footer p {
     font-size: 0.75em;
     font-style: italic;
     text-align: center;
 }
 
-#staff-img {
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    width: 100px;
-    height: 100px;
+.game-image {
+    padding: 0;
+    text-align: center;
+    list-style: none;
+    display: flex;
+    gap: 16px;
 }
 
-/*join.htm*/
-fieldset {
-    border: 2px solid black;
-    padding: 20px;
-    margin-top: 20px;
+.info-text {
+    text-align: center;
+}
+
+#staff-img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px black;
 }
 
 .gridcontainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-flow: dense;
-    gap: 15px;
+    grid-auto-rows: auto;
+    gap: 10px;
+}
+
+.image-container {
+    border: 1px solid black;
+    padding: 10px;
+    grid-column: auto;
+    grid-row: auto;
 }
 
 .image-container img {
     width: 100%;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-    height: 100px;
-    width: 100px;
-  }
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
 
-.image-container.large-width {
+.large-width {
     grid-column: span 2;
-    height: 100px;
-    width: 100px;
 }
 
-.image-container.large-height {
+.large-height {
     grid-row: span 2;
-    height: 100px;
-    width: 100px;
 }
 
+.caption {
+    position: absolute;
+    padding: 10px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.7);
+}
