--- a/pages/style.css
+++ b/pages/style.css
@@ -75,10 +75,6 @@ footer p {
     text-align: center;
 }
 
-.about-us {
-    margin-top: 6%;
-}
-
 #staff-img {
     border-radius: 10px;
     box-shadow: 2px 2px 5px black;
@@ -86,42 +82,39 @@ footer p {
     height: 100px;
 }
 
-.gridcontainer {
+.grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-flow: dense;
-    grid-auto-rows: auto;
-    gap: 10px;
-}
+    grid-gap: 10px;
+  }
 
-.image-container {
-    border: 1px solid black;
-    padding: 10px;
-    grid-column: auto;
-    grid-row: auto;
-}
-
-.image-container img {
+  .grid-item {
     width: 100%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
+  }
 
-.large-width img {
+  .grid-item img {
+    /* display: block; */
     width: 100%;
-    grid-column: 2;
-}
+    height: auto;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  }
 
-.large-height img {
-    width: 100%;
-    grid-row: 2;
-}
+  .grid-item-wide {
+    grid-column: span 2;
+  }
+  
+  .grid-item-tall {
+    grid-row: span 2;
+  }
 
-.caption {
-    position: absolute;
-    padding: 10px;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.7);
-}
+  .caption {
+    bottom: 5px;
+    left: 5px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
+  }
 
 .shapes {
     display: grid;
